--- a/app/src/main/res/layout/activity_chooseaction.xml
+++ b/app/src/main/res/layout/activity_chooseaction.xml
@@ -15,17 +15,28 @@
 
 
         />
-    <HorizontalScrollView
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/color_filter_scroll"
-        android:layout_gravity="bottom|center_horizontal">
-
+        android:layout_gravity="bottom|center_horizontal"
+        android:background="#000000"
+        android:orientation="vertical">
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar"
+            android:layout_gravity="center_horizontal|top"
+            android:max="255"/>
+        <HorizontalScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/color_filter_scroll">
+           
         </HorizontalScrollView>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="testClick"
-        android:text="HAHAHAAH"
-        android:layout_gravity="bottom|center_horizontal"/>
+
+
+        </LinearLayout>
+
+
 </FrameLayout>
