--- a/app/src/main/res/layout/activity_chooseaction.xml
+++ b/app/src/main/res/layout/activity_chooseaction.xml
@@ -1,42 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:id="@+id/main_layout_choose_action">
-    
-    <ImageView
-        android:id="@+id/image_preview"
+    android:id="@+id/main_layout_choose_action"
+    android:background="@color/standard_background"
+    >
+    <FrameLayout
         android:layout_width="fill_parent"
-    	android:layout_height="fill_parent"
-        android:adjustViewBounds="true"
-        android:src="@drawable/ic_gallery"
+        android:layout_height="fill_parent"
+        android:layout_weight="1">
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|right"
+            android:src="@drawable/ic_share"
+            android:background="@color/light_background"
+            android:onClick="onShare"
+            android:layout_margin="8dp"/>
 
-
-        />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="bottom|center_horizontal"
+            android:visibility="gone"
+            android:background="@color/standard_background"
+            android:id="@+id/layout_strength" >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/strength"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/white"/>
+            <SeekBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/seekBar"
+                android:layout_gravity="center_horizontal|top"
+                android:max="255"
+                android:progress="110"/>
+        </LinearLayout>
+    </FrameLayout>
     <LinearLayout
+        android:layout_weight="0"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
-        android:background="#000000"
+        android:background="@color/standard_background"
         android:orientation="vertical">
-        <SeekBar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/seekBar"
-            android:layout_gravity="center_horizontal|top"
-            android:max="255"/>
         <HorizontalScrollView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/color_filter_scroll">
-           
+            android:id="@+id/color_filter_scroll"
+            android:background="@color/light_background"
+            android:paddingBottom="16dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingTop="8dp">
+
         </HorizontalScrollView>
 
 
         </LinearLayout>
 
 
-</FrameLayout>
+</LinearLayout>
