--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <resources>
 
     <color name="black_overlay">#66000000</color>
+    <color name="standard_background">#3B3B3B</color>
+    <color name="light_background">#7B7B7B</color>
+    <color name="white">#F5F5F5</color>
 
 </resources>
