--- a/app/src/main/res/layout/activity_chooseaction.xml
+++ b/app/src/main/res/layout/activity_chooseaction.xml
@@ -18,8 +18,16 @@
             android:src="@drawable/ic_share"
             android:background="@color/light_background"
             android:onClick="onShare"
-            android:layout_margin="8dp"/>
-
+            android:layout_margin="8dp"
+            android:id="@+id/imgBtnShare"
+            android:visibility="gone"/>
+        <ImageView
+            android:id="@+id/image_preview"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:adjustViewBounds="true"
+            android:src="@drawable/ic_gallery"
+            android:layout_gravity="top|center_horizontal"/>
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
