--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -3,29 +3,19 @@
     android:id="@+id/main_layout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/standard_background"
-    android:gravity="fill"
+    android:background="@drawable/main_screen"
+    android:gravity="bottom"
     android:orientation="vertical"
     tools:context="com.ed9m.photoeditor.FullscreenActivity" >
-
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:scaleType="fitStart"
-        android:src="@drawable/main_screen"
-        android:layout_weight="1"
-        android:contentDescription="@string/icon_desc"
-        />
 
 
     <LinearLayout
         android:id="@+id/buttons_layout"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|center_horizontal"
-        android:orientation="horizontal"
-        android:layout_weight="0.5">
-
+        android:paddingBottom="72dp"
+        android:orientation="horizontal">
         <ImageButton
             android:id="@+id/ibt_gallery"
             android:layout_width="match_parent"
@@ -44,7 +34,16 @@
             android:layout_margin="15dp"
             android:background="@null"
             android:src="@drawable/ic_camera"
-            android:contentDescription="@string/camera_desc" />
-    </LinearLayout>
+            android:contentDescription="@string/camera_desc"
+            />
 
+    </LinearLayout>
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:layout_gravity="bottom|center_horizontal"
+        android:id="@+id/adView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        ads:adSize="SMART_BANNER"
+        ads:adUnitId="@string/banner_id"/>
 </LinearLayout>
