--- a/app/src/main/res/layout/activity_chooseaction.xml
+++ b/app/src/main/res/layout/activity_chooseaction.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="bottom|center_horizontal"
-
+            android:visibility="gone"
             android:background="@color/standard_background"
             android:id="@+id/layout_strength" >
             <LinearLayout
