--- a/app/src/main/res/layout/activity_chooseaction.xml
+++ b/app/src/main/res/layout/activity_chooseaction.xml
@@ -20,6 +20,13 @@
             android:adjustViewBounds="true"
             android:src="@drawable/ic_gallery"
             android:layout_gravity="top|center_horizontal"/>
+        <Button
+            android:id="@+id/start_curves"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="start curves"
+            android:layout_gravity="top|left"
+            android:onClick="onStartCurves"/>
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
