--- a/app/src/main/res/layout/activity_curves.xml
+++ b/app/src/main/res/layout/activity_curves.xml
@@ -20,7 +20,8 @@
 
             <Button android:id="@+id/pbt_apply"
                 android:layout_width="0dp" android:layout_height="wrap_content"
-                android:layout_weight="1" android:text="@string/apply_text" />
+                android:layout_weight="1" android:text="@string/apply_text"
+                android:onClick="onApplyClick"/>
             <Button android:id="@+id/pbt_cancel"
                 android:layout_width="0dp" android:layout_height="wrap_content"
                 android:layout_weight="1" android:text="@string/cancel_text" />
